syntax = "proto3";

import "message.proto";

message FilterRequest {
  optional bool subscribe = 1;
  optional string topic = 2;
  repeated ContentFilter content_filters = 3;

  message ContentFilter {
    optional string content_topic = 1;
  }
}

message MessagePush {
  repeated WakuMessage messages = 1;
}

message FilterRPC {
  optional string request_id = 1;
  optional FilterRequest request = 2;
  optional MessagePush push = 3;
}
