syntax = "proto3";

import "message.proto";

message Index {
  optional bytes digest = 1;
  optional double received_time = 2;
  optional double sender_time = 3;
}

message PagingInfo {
  optional uint64 page_size = 1;
  optional Index cursor = 2;
  enum Direction {
    DIRECTION_BACKWARD_UNSPECIFIED = 0;
    DIRECTION_FORWARD = 1;
  }
  optional Direction direction = 3;
}

message ContentFilter {
  optional string content_topic = 1;
}

message HistoryQuery {
  optional string pub_sub_topic = 2;
  repeated ContentFilter content_filters = 3;
  optional PagingInfo paging_info = 4;
  optional double start_time = 5;
  optional double end_time = 6;
}

message HistoryResponse {
  repeated WakuMessage messages = 2;
  optional PagingInfo paging_info = 3;
  enum HistoryError {
    ERROR_NONE_UNSPECIFIED = 0;
    ERROR_INVALID_CURSOR = 1;
  }
  optional HistoryError error = 4;
}

message HistoryRPC {
  optional string request_id = 1;
  optional HistoryQuery query = 2;
  optional HistoryResponse response = 3;
}
